# custom-antismash-demo

./: README.md  pyproject.toml  setup.cfg
customsmash/: __init__.py  __main__.py  main.py
customsmash/config/: default.cfg
customsmash/detection/custom_detection/: __init__.py
customsmash/detection/custom_detection/cluster_rules/: rules.txt
customsmash/detection/custom_detection/data/: profiles.hmm
customsmash/modules/custom_analysis/: __init__.py
customsmash/outputs/html/: __init__.py
customsmash/outputs/html/css/: bacteria.css  bacteria.scss  secmet.scss  style.scss
customsmash/outputs/html/images/: README
